--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,7 @@
             <li><a href="#">CARRERS</a></li>
             <li><a href="#"> CONTACT</a></li>
         </ul>
+        <img src="blog-icon.png" alt="">
     </nav>
     
     <div class="container">
@@ -34,10 +35,13 @@
         Dolor amet  repellat ratione? Sequi, repellat cumque, placeat deserunt odio vel, quasi laborum eum ad reiciendis maxime fuga a dolorum iusto dolores atque odit iure autem voluptatibus eaque. Deleniti!
         Accusamus, dolorum consectetur. Quas, voluptate! Neque consectetur ex magni ipsam. Nemo necessitatibus molestias ipsam veritatis excepturi, iusto velit quidem eius labore vitae iure neque culpa nihil explicabo inventore ipsa repellendus.
         </p>
+        <br>
         <p>Lorem, ipsum dolor sit  ipsam similique dolorem esse quas consectetur dicta quibusdam. Dicta, id. Molestiae quia minima reiciendis rem harum vitae eligendi in repellendus voluptates, alias, debitis nemo.
         Laudantium quibusdam, debitis inventore rerum porro accusantium eligendi dolore sit atque quae praesentium error id. Fugit, recusandae porro corporis dolor cupiditate odio quos repudiandae necessitatibus molestiae suscipit ducimus, dolore harum.</p>
+        <br>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint omnis eveniet, impedit nemo voluptatem nihil. Quam sequi quaerat distinctio eius quia voluptates at explicabo sapiente nisi? Dolorum minus fugit molestiae!
          Ea quis omnis doloremque maxime in, ipsum laboriosam odit, blanditiis illo a error inventore reiciendis! Consequatur saepe corporis praesentium iure exercitationem! Repellat, corporis. Vel ea ratione maxime placeat!</p>
+         <br>
     </div>
 </body>
 </html>
