--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
         <h3>WELCOME!</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti quos exercitationem, dolorem aspernatur minus accusamus architecto natus delectus voluptate incidunt. Corporis, provident impedit illo possimus tempore rem aut itaque aliquid.
         Dolor amet  repellat ratione? Sequi, repellat cumque, placeat deserunt odio vel, quasi laborum eum ad reiciendis maxime fuga a dolorum iusto dolores atque odit iure autem voluptatibus eaque. Deleniti!
-        Accusamus, dolorum consectetur. Quas, voluptate! Neque consectetur ex magni ipsam. Nemo necessitatibus molestias ipsam veritatis excepturi, iusto velit quidem eius labore vitae iure neque culpa nihil explicabo inventore ipsa repellendus.
+        Accusamus, dolorum consectetur. Quas voluptate! Neque consectetur ex magni ipsam. Nemo necessitatibus molestias ipsam veritatis excepturi, iusto velit quidem eius labore vitae iure neque culpa nihil explicabo inventore ipsa repellendus.
         </p>
         <br>
         <p>Lorem, ipsum dolor sit  ipsam similique dolorem esse quas consectetur dicta quibusdam. Dicta, id. Molestiae quia minima reiciendis rem harum vitae eligendi in repellendus voluptates, alias, debitis nemo.
