index changed again

--- a/Index.html
+++ b/Index.html
@@ -37,7 +37,7 @@
         </p>
         <br>
         <p>Lorem, ipsum dolor sit  ipsam similique dolorem esse quas consectetur dicta quibusdam. Dicta, id. Molestiae quia minima reiciendis rem harum vitae eligendi in repellendus voluptates, alias, debitis nemo.
-        Laudantium quibusdam, debitis inventore rerum porro accusantium eligendi dolore sit atque quae praesentium error id. Fugit, recusandae porro corporis dolor cupiditate odio quos repudiandae necessitatibus molestiae suscipit ducimus, dolore harum.</p>
+        Laudantium qibusdam, debitis inventore rerum porro accusantium eligendi dolore sit atque quae praesentium error id. Fugit, recusandae porro corporis dolor cupiditate odio quos repudiandae necessitatibus molestiae suscipit ducimus, dolore harum.</p>
         <br>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint omnis eveniet, impedit nemo voluptatem nihil. Quam sequi quaerat distinctio eius quia voluptates at explicabo sapiente nisi? Dolorum minus fugit molestiae!
          Ea quis omnis doloremque maxime in, ipsum laboriosam odit, blanditiis illo a error inventore reiciendis! Consequatur saepe corporis praesentium iure exercitationem! Repellat, corporis. Vel ea ratione maxime placeat!</p>
